# simba

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  roadmap.md  skills
.claude-plugin/: hooks.json  plugin.json
.claude/rules/: CORE_INSTRUCTIONS.md
.codex/: hooks.json
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: eval-remote-gpu.md
docs/adr/: 2026-07-10-internal-api-footguns.md
docs/blog/: README.md  how-we-measured-our-way-to-parity.md  part1-origins.md  part2-neurosymbolic-bet.md  part3-evaluation-as-benchmark.md
docs/plans/: 01-eval-bench-infra.md  02-judge-baselines.md  03-hyde-ircot.md  04-decay-forgetting.md  05-reflection-neurosymbolic-ops.md  06-multihop.md  07-recall-excellence.md  08-borrow-survey.md  09-entity-bridge-multihop.md  10-halumem-forgetting-eval.md  11-sota-comparison.md  12-borrow-implementation.md  13-sota-stepc-verdict.md  14-answer-time-conflict-surfacing.md  15-write-time-neurosymbolic-loop.md  17-episodic-aggregation-view.md  18-durable-workflow-engine.md  19-ledgers-on-workflow-lease.md  22-reranker-backends.md  23-pi-harness-support-plan.md  23-pi-harness-support.md  24-pi-tool-gating.md  25-guardian-cost-and-gate-graduation.md  26-hierarchical-project-memory.md  27-reasoning-layer-verification.md  28-intent-priming-and-preflight.md  29-memory-borrow-roadmap.md  30-autocontext-trace-curator.md  31-candidate-unit-ir-eval.md  32-longmemeval-s-eval-discipline.md  33-memory-lifecycle-compounding.md  HANDOFF.md  README.md
scripts/: checks.sh  embedder_bakeoff.py  fetch_benchmarks.sh  regrade_mem0.py  run_locomo.py  run_longmemeval.py  run_qa.py
skills/memories-learn/: SKILL.md
skills/memories-recall-verify/: SKILL.md
skills/memories-sanitize/: SKILL.md
skills/qmd/: SKILL.md
skills/remember/: SKILL.md
skills/simba-onboard/: SKILL.md
skills/token-stats/: SKILL.md
src/simba/: __init__.py  __main__.py  config.py  config_cli.py  db.py  markers.py  markers_cli.py  rules_cli.py  skill_install.py  stats.py  task_snapshot.py
tests/: conftest.py  test_bench_results.py  test_config.py  test_config_cli.py  test_core_import.py  test_db.py  test_eval_bench.py  test_eval_bench_smoke.py  test_eval_leaderboard.py  test_eval_triage.py  test_internal_list_projection_lint.py  test_lance_projection_lint.py  test_main_cli.py  test_markers.py  test_markers_cli.py  test_rules_cli.py  test_skill_install.py  test_skills.py  test_stats.py  test_task_snapshot.py  test_tool_rules.py  test_transcript_distill_cli.py  test_transcripts.py
tests/codex/: test_curator.py
tests/doctrine/: test_intent.py  test_preflight.py  test_preflight_cli.py  test_priming.py  test_store.py
tests/episodes/: test_config.py  test_consolidate.py  test_jobs.py  test_watermark.py  test_wiring.py
tests/eval/: test_ambiguity.py  test_ambiguity_mining_probe.py  test_ambiguity_taxonomy.py  test_answer_unit_witness.py  test_answer_unit_witness_diagnostics.py  test_answer_window_selector.py  test_anticipated_queries.py  test_build.py  test_candidate_unit_diagnostics.py  test_candidate_unit_envelope.py  test_candidate_unit_fact_normalizer.py  test_candidate_unit_formalizer.py  test_candidate_unit_ir.py  test_candidate_unit_recursive_compiler.py  test_candidate_unit_runner.py  test_config.py  test_corpus_doctor.py  test_dataset.py  test_digest_corpus.py  test_extraction_eval.py  test_interpretation_infill.py  test_interpretation_infill_diagnostics.py  test_interpretation_ir.py  test_interpretation_metrics.py  test_interpretation_parser.py  test_interpretation_prompts.py  test_interpretation_quality_review.py  test_interpretation_retrieval_recall.py  test_interpretation_retrieval_tuning.py  test_interpretation_runner.py  test_interpretation_verifier_probe.py  test_kg_ceiling.py  test_kg_corpus.py  test_lexicon_bootstrap.py  test_location_ontology.py  test_metrics.py  test_ontology_router.py  test_recall_adapter.py  test_report.py  test_run.py  (+4 more)
tests/fixtures/: smoke_bench.json
tests/guardian/: test_check_signal.py  test_engagement_flag.py  test_extract_core.py  test_preflight_flag.py  test_signal_flag.py
tests/harness/: test_claude_adapter.py  test_cli_transport.py  test_client.py  test_core.py  test_cwd_safety.py  test_hook_endpoint.py  test_pretool_canonical.py
tests/hooks/: test_compact_focus.py  test_compact_relay_arcs.py  test_config_spec27.py  test_config_spec28.py  test_context_lanes.py  test_context_low.py  test_engagement.py  test_engagement_wiring.py  test_kg_client.py  test_lifecycle_nudges.py  test_memory_client.py  test_permission_request.py  test_pi_context_message_end.py  test_post_tool_batch.py  test_post_tool_use.py  test_post_tool_use_filters.py  test_pre_compact.py  test_pre_compact_distill.py  test_pre_compact_streaming.py  test_pre_tool_use.py  test_pre_tool_use_scoping.py  test_reasoning_verify.py  test_recall_triage.py  test_session_start.py  test_stop.py  (+7 more)
tools/: enforce_module_imports.py
(+462 files in other folders)
