[project]
# Distribution name ("simba" is taken on PyPI). The import package + CLI stay
# `simba` (see [project.scripts] + [tool.setuptools.packages.find]).
name = "simba-ai"
version = "0.5.0"
description = "Unified Claude Code plugin — semantic memory, rule enforcement, neuro-symbolic logic, and project search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "mcp[cli]",
    "z3-solver",
    "tomli-w>=1.0",
]

# Heavy ML deps are opt-in: a "core" install (KG, sync, config CLI, hooks,
# neuro-symbolic logic) works without them; the in-process embedding daemon
# needs `simba-ai[embed]`. All lancedb/llama_cpp/huggingface_hub imports are
# lazy (inside functions), so importing core modules never pulls these in.
[project.optional-dependencies]
embed = [
    "lancedb>=0.4",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.26",
]
full = ["simba-ai[embed]"]

[project.scripts]
simba = "simba.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simba = [
    "skills/**/*.md",
    "skills/**/*.yaml",
    "codex_skills/**/*.md",
    "codex_skills/**/*.yaml",
    "eval/datasets/*.json",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "pyrefly>=0.15",
    "pre-commit>=4.0",
    "libcst>=1.0",
    # The full test suite exercises the LanceDB-backed daemon, so dev installs
    # pull in the optional `embed` extra (kept out of the runtime core deps).
    "lancedb>=0.4",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.26",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py313"
# Vendored third-party code (peewee + playhouse) is kept verbatim — never lint it.
extend-exclude = ["src/simba/_vendor"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "RUF",   # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["TCH002", "TCH003"]
"tests/conftest.py" = ["TCH002", "TCH003"]
"tools/**/*.py" = ["N802"]  # libcst uses PascalCase visitor methods
"src/simba/neuron/templates.py" = ["E501"]  # markdown template content
"src/simba/orchestration/templates.py" = ["E501"]  # markdown template content

[tool.ruff.lint.isort]
known-first-party = ["simba"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.path".msg = "Use pathlib.Path instead of os.path"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["simba"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pyrefly]
python_version = "3.13"
search_path = ["src"]
